[package]
name = "irp-todo"
version = "0.1.0"
authors = ["den-taku <dentaku1412@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
actix-rt = "1.1.1"
thiserror = "1.0.26"
askama = "0.10.5"
# actix-rt = "2.2.0"
# actix = "0.12.0"
